Use schtasks on Windows and systemd timers on Linux for background autosaving